synchronize selection of Search with treeeBindings and ensure correct Mesh selection